# analytical_engine

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  DEPLOY_TASKS.md  DEPLOY_VERCEL.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  RUNBOOK.md  lint-staged.config.cjs  package.json  pnpm-lock.yaml  render.yaml  revts  test.js  tsconfig.base.json  turbo.json  vercel.json
.github/workflows/: ci.yml  scheduled-jobs.yml
.turbo/cache/: 00b49a098f9e6533-meta.json  012cd3d61a75a584-meta.json  0202d4235fe0f0f0-meta.json  0202d4235fe0f0f0.tar.zst  02713c379ce9f8dc-meta.json  0325cfd5a98d27ea-meta.json  038eaceb2e87cf53-meta.json  04afe5c8561db415-meta.json  0572e72ea1a4ec6e-meta.json  0d2e7b19e55f9537-meta.json  0d2e7b19e55f9537.tar.zst  0d627fddaa424692-meta.json  0f01e7d5a35368d3-meta.json  129ebffe7229477c-meta.json  129ebffe7229477c.tar.zst  159019d291f9e1d3-meta.json  1c8a5383053f78ab-meta.json  1d680f3fd1580ba8-meta.json  (+118 more)
services/intelligence/: .env.example  Dockerfile  README.md  pyproject.toml
services/intelligence/app/: config.py  main.py  schemas.py  security.py  telemetry.py
services/intelligence/app/engines/: common.py  language.py  portfolio.py  quiz.py  sip.py  social.py  trust_score.py
services/intelligence/app/jobs/: financial_sync.py  market_sync.py  news_ingest.py  social_ingest.py  store.py  trust_recompute.py  universe.py
services/intelligence/app/providers/: newsapi.py  reddit.py  yahoo.py
services/intelligence/app/tests/: test_news_ingest.py  test_news_provider.py  test_quiz_portfolio_sip.py  test_social_engine.py  test_trust_score.py
(+63 files in other folders)
