[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anylical-intelligence"
version = "0.1.0"
description = "Deterministic intelligence engines for Anylical Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
